banner sectin done

--- a/index.html
+++ b/index.html
@@ -3,24 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gaming Landing Page</title>
+    <title>My Gaming Website</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" type="image/x-icon" href="/images/game-controller.png" />
   </head>
   <body>
     <header>
+      <!-- Nav Section  -->
       <nav>
         <img src="/images/game-controller.png" alt="" />
-        <h3><span>G</span>amer</h3>
+        <h3><span class="g-color">G</span>amer</h3>
         <ul>
-          <li><a href=""></a>About Us</li>
-          <li><a href=""></a>Developers</li>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Developers</a></li>
           <div class="box">
-            <li><img src="/images/youtube.png" alt="" /></li>
-            <li><img src="/images/tik-tok.png" alt="" /></li>
+            <li><a href="">Follow Us On</a></li>
+            <li>
+              <a href=""><img src="/images/youtube.png" alt="" /></a>
+            </li>
+            <li>
+              <a href=""><img src="/images/tik-tok.png" alt="" /></a>
+            </li>
           </div>
         </ul>
       </nav>
+      <!-- Banner section  -->
+
     </header>
     <main></main>
     <footer></footer>
