--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
         </ul>
       </nav>
       <!-- Banner section  -->
-
+      <div class="banner">
+        <div class="banner-content">
+          <h2>Play Like The</h2>
+          <h1>G.O.A.T.</h1>
+          <p>1-Click instant play</p>
+          <p>No Download</p>
+          <p>1000s of supported online games</p>
+          <button class="btn-primary">SIGN IN</button>
+          <button class="btn-secondary">GO ROGUE</button>
+        </div>
+        <div class="banner-img">
+          <img src="/images/Group 18.png" alt="" />
+        </div>
+      </div>
     </header>
     <main></main>
     <footer></footer>
