online game section done

--- a/index.html
+++ b/index.html
@@ -43,7 +43,35 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <!-- Online Games Funny Videos -->
+      <section class="online-games">
+        <div class="title">
+          <h1>Online Games <span class="funny-text">Funny Videos</span></h1>
+          <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+        </div>
+        <div class="img-container">
+          <div>
+            <img class="first-img" src="images/Rectangle 4.png" alt="" />
+            <p class="first-paragraph">
+              No Download. No Installs. Play <br />games Instantly on Gamer.
+            </p>
+          </div>
+          <div>
+            <img class="second-img" src="images/Rectangle 5.png" alt="" />
+            <p>Did you score? #unblockedgames <br />#school</p>
+          </div>
+          <div>
+            <img class="third-img" src="images/Rectangle 7.png" alt="" />
+            <p>Breaking game records <br />like OG</p>
+          </div>
+          <div>
+            <img class="forth-img" src="images/Rectangle 6.png" alt="" />
+            <p>Busted gaming on school laptop, <br />but you are still lit.</p>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
