--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Gaming Website</title>
+
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/x-icon" href="/images/game-controller.png" />
+    <link rel="icon" type="image/x-icon" href="images/game-controller.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <header>
       <!-- Nav Section  -->
       <nav>
-        <img src="/images/game-controller.png" alt="" />
+        <img src="images/Frame.png" alt="" />
         <h3><span class="g-color">G</span>amer</h3>
         <ul>
           <li><a href="">About Us</a></li>
@@ -19,10 +24,10 @@
           <div class="box">
             <li><a href="">Follow Us On</a></li>
             <li>
-              <a href=""><img src="/images/youtube.png" alt="" /></a>
+              <a href=""><img src="images/youtube.png" alt="" /></a>
             </li>
             <li>
-              <a href=""><img src="/images/tik-tok.png" alt="" /></a>
+              <a href=""><img src="images/tik-tok.png" alt="" /></a>
             </li>
           </div>
         </ul>
@@ -39,7 +44,7 @@
           <button class="btn-secondary">GO ROGUE</button>
         </div>
         <div class="banner-img">
-          <img src="/images/Group 18.png" alt="" />
+          <img src="images/Group 18.png" alt="" />
         </div>
       </div>
     </header>
