online game funny game added

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </ul>
       </nav>
       <!-- Banner section  -->
+      <!-- Play Like The GOAT  -->
       <div class="banner">
         <div class="banner-content">
           <h2>Play Like The</h2>
@@ -75,7 +76,7 @@
             <p>Busted gaming on school laptop, <br />but you are still lit.</p>
           </div>
         </div>
-      </section>
+
     </main>
     <footer></footer>
   </body>
