reverse section done

--- a/index.html
+++ b/index.html
@@ -76,6 +76,43 @@
             <p>Busted gaming on school laptop, <br />but you are still lit.</p>
           </div>
         </div>
+        <!-- Play Instantly, No Downloads, No Installs. -->
+      </section>
+      <section class="play-instantly">
+        <div class="text-content">
+          <h1>
+            <span class="funny-text">Play Instantly,</span><br />
+            No Downloads No Installs.
+          </h1>
+          <p>
+            Play games online for free without <br />downloading. Just click the
+            Play button <br />and play instantly in your browser.
+          </p>
+        </div>
+        <div class="picture">
+          <img class="first" src="images/Rectangle 55.png" alt="" />
+          <img class="second" src="images/Rectangle 66.png" alt="" />
+        </div>
+      </section>
+      <!-- play-instantly-second-Section  -->
+      <section class="play-instantly-second">
+        <div class="text-content">
+          <h1>
+            <span class="funny-text">Play Game <br />Online</span>
+            Anywhere, Anytime!
+          </h1>
+          <p>
+            PC. dad’s phone, mom’s tablet, or your Chromebook, <br />
+            with Gamer you can play your favorite games online <br />for free,
+            any time, anywhere , on any device.
+          </p>
+        </div>
+        <div class="picture">
+          <img class="first" src="images/Rectangle 55.png" alt="" />
+          <img class="second" src="images/Rectangle 66.png" alt="" />
+        </div>
+      </section>
+
 
     </main>
     <footer></footer>
