--- a/index.html
+++ b/index.html
@@ -154,7 +154,41 @@
       </section>
     </main>
     <footer>
-
+      <div class="logo-title">
+        <img src="images/Frame.png" alt="" />
+        <h3><span class="g-color">G</span>amer</h3>
+      </div>
+      <div class="options">
+        <ul>
+          <li><a href="">Games</a></li>
+          <li><a href="">Web Games</a></li>
+          <li><a href="">Careers</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">My Account</a></li>
+        </ul>
+      </div>
+      <div class="social-icon">
+        <div class="icon facebook-icon">
+          <img src="images/facebook.svg" alt="" />
+        </div>
+        <div class="icon youtube-icon">
+          <img src="images/youtube.svg" alt="" />
+        </div>
+        <div class="icon instagram-icon">
+          <img src="images/instagram.svg" alt="" />
+        </div>
+      </div>
+      <div class="options">
+        <ul>
+          <li><a href="">Terms and Conditions</a></li>
+          <li><a href="">Privacy Policy</a></li>
+          <li><a href="">Cookie Policy</a></li>
+          <li><a href="">Privacy Settings</a></li>
+        </ul>
+        <p class="last-footer">
+          Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+        </p>
+      </div>
     </footer>
   </body>
 </html>
