--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <header>
       <!-- Nav Section  -->
       <nav>
-        <img src="images/Frame.png" alt="" />
-        <h3><span class="g-color">G</span>amer</h3>
+        <div class="logo">
+          <img src="images/Frame.png" alt="" />
+          <h3><span class="g-color">G</span>amer</h3>
+        </div>
         <ul>
           <li><a href="">About Us</a></li>
           <li><a href="">Developers</a></li>
