--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
           </div>
         </ul>
       </nav>
-      <!-- Banner section  -->
-      <!-- Play Like The GOAT  -->
+    </header>
+    <!-- Banner section  -->
+    <!-- Play Like The GOAT  -->
+
+    <main>
       <div class="banner">
         <div class="banner-content">
           <h2>Play Like The</h2>
@@ -50,8 +53,6 @@
           <img src="images/Group 18.png" alt="" />
         </div>
       </div>
-    </header>
-    <main>
       <!-- Online Games Funny Videos -->
       <section class="online-games">
         <div class="title">
@@ -70,7 +71,7 @@
             <p>Did you score? #unblockedgames <br />#school</p>
           </div>
           <div>
-            <img class="third-img" src="images/Rectangle 7.png" alt="" />
+            <div class="third-img"><i class="fa-solid fa-play fa-sm"></i></div>
             <p>Breaking game records <br />like OG</p>
           </div>
           <div>
@@ -84,7 +85,7 @@
         <div class="text-content">
           <h1>
             <span class="funny-text">Play Instantly,</span><br />
-            No Downloads No Installs.
+            No Downloads <br />No Installs.
           </h1>
           <p>
             Play games online for free without <br />downloading. Just click the
@@ -98,10 +99,14 @@
       </section>
       <!-- play-instantly-second-Section  -->
       <section class="play-instantly-second">
+        <div class="picture">
+          <img class="first" src="images/Rectangle 67.png" alt="" />
+          <img class="second" src="images/Rectangle 78.png" alt="" />
+        </div>
         <div class="text-content">
           <h1>
             <span class="funny-text">Play Game <br />Online</span>
-            Anywhere, Anytime!
+            Anywhere, <br />Anytime!
           </h1>
           <p>
             PC. dad’s phone, mom’s tablet, or your Chromebook, <br />
@@ -109,49 +114,49 @@
             any time, anywhere , on any device.
           </p>
         </div>
-        <div class="picture">
-          <img class="first" src="images/Rectangle 67.png" alt="" />
-          <img class="second" src="images/Rectangle 78.png" alt="" />
-        </div>
       </section>
 
       <!-- All Games Section -->
       <section class="all-games">
-        <div class="boxs">
-          <img src="images/Rectangle 11.png" alt="" />
-          <p>Action Games</p>
+        <div class="top">
+          <div class="boxs">
+            <img src="images/Rectangle 11.png" alt="" />
+            <p>Action Games</p>
+          </div>
+          <div class="boxs">
+            <img src="images/Rectangle 12.png" alt="" />
+            <p>Adventure Games</p>
+          </div>
+          <div id="border-box" class="boxs">
+            <img src="images/Rectangle 13.png" alt="" />
+            <p>Arcade Games</p>
+          </div>
+          <div class="boxs">
+            <img src="images/Rectangle 14.png" alt="" />
+            <p>Educational Games</p>
+          </div>
+          <div class="boxs">
+            <img src="images/Rectangle 15.png" alt="" />
+            <p>Word Games</p>
+          </div>
         </div>
-        <div class="boxs">
-          <img src="images/Rectangle 12.png" alt="" />
-          <p>Adventure Games</p>
-        </div>
-        <div class="boxs">
-          <img src="images/Rectangle 13.png" alt="" />
-          <p>Arcade Games</p>
-        </div>
-        <div class="boxs">
-          <img src="images/Rectangle 14.png" alt="" />
-          <p>Educational Games</p>
-        </div>
-        <div class="boxs">
-          <img src="images/Rectangle 15.png" alt="" />
-          <p>Word Games</p>
-        </div>
-        <div class="boxs">
-          <img src="images/Rectangle 16.png" alt="" />
-          <p>Role Palying Games</p>
-        </div>
-        <div class="boxs">
-          <img src="images/Rectangle 17.png" alt="" />
-          <p>Music & Audio Games</p>
-        </div>
-        <div class="boxs">
-          <img src="images/Rectangle 18.png" alt="" />
-          <p>Puzzle Games</p>
-        </div>
-        <div class="boxs">
-          <img src="images/Rectangle 19.png" alt="" />
-          <p>Strategy Games</p>
+        <div class="bottom">
+          <div class="boxs">
+            <img src="images/Rectangle 16.png" alt="" />
+            <p>Role Palying Games</p>
+          </div>
+          <div class="boxs">
+            <img src="images/Rectangle 17.png" alt="" />
+            <p>Music & Audio Games</p>
+          </div>
+          <div class="boxs">
+            <img src="images/Rectangle 18.png" alt="" />
+            <p>Puzzle Games</p>
+          </div>
+          <div class="boxs">
+            <img src="images/Rectangle 19.png" alt="" />
+            <p>Strategy Games</p>
+          </div>
         </div>
       </section>
     </main>
@@ -171,13 +176,13 @@
       </div>
       <div class="social-icon">
         <div class="icon facebook-icon">
-          <img src="images/facebook.svg" alt="" />
+          <a href=""><img src="images/facebook.svg" alt="" /></a>
         </div>
         <div class="icon youtube-icon">
-          <img src="images/youtube.svg" alt="" />
+          <a href=""><img src="images/youtube.svg" alt="" /></a>
         </div>
         <div class="icon instagram-icon">
-          <img src="images/instagram.svg" alt="" />
+          <a href=""><img src="images/instagram.svg" alt="" /></a>
         </div>
       </div>
       <div class="options">
@@ -188,7 +193,7 @@
           <li><a href="">Privacy Settings</a></li>
         </ul>
         <p class="last-footer">
-          Play Games @ Gamer @ 2000-2023 Gamer Bangladesh
+          <small>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</small>
         </p>
       </div>
     </footer>
